--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -9,11 +9,10 @@ spring:
     hibernate:
       ddl-auto: create
 
-  data:
-    rest:
-      base-path: /api
 server:
   port: 9090
+  servlet:
+    context-path: /api
 custom:
   cors:
     allowed-origins: http://localhost:3000
